--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@next/font": "^14.2.15",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -22,12 +23,14 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tabler/icons-react": "^3.28.1",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^11.18.0",
     "jose": "^5.9.6",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
