--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
