--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "framer-motion": "^11.18.0",
     "jose": "^5.9.6",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^15.2.4",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
